--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,17 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1' // Use the latest version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10" // Use the latest version
+    }
+}
+
+
 allprojects {
     repositories {
         google()
@@ -5,14 +19,6 @@ allprojects {
     }
 }
 
-rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(':app')
-}
-
-tasks.register("clean", Delete) {
+task clean(type: Delete) {
     delete rootProject.buildDir
 }
